--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 author = Tom Sapletta
 author_email = info@softreck.dev
-url = https://github.com/memfs/python
+url = https://github.com/pyfunc/memfs
 license = Apache-2.0
 classifiers =
     Development Status :: 3 - Alpha
