--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    memfs = memfs.cli:main
+    memfs = memfs.cli_with_shell:main
 
 [mypy]
 python_version = 3.7
